# mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  demo-v2.cast  demo.cast  mise.toml  release-please-config.json
.claude/: settings.json
.github/workflows/: ci.yml  release-please.yml  release.yml
src/: client.rs  main.rs  server.rs
